Fix footer on mobile

--- a/src/components/layout/Footer/Location.module.css
+++ b/src/components/layout/Footer/Location.module.css
@@ -1,19 +1,19 @@
-.root {
-
-}
+.root {}
 
 .image {
   margin-bottom: 20px;
 }
 
-.info.left {
-  text-align: left;
-}
-
-.info.right {
-  text-align: right;
-}
-
 .name {
   margin-right: 20px;
+}
+
+@media (min-width: 321px) {
+  .info.left {
+    text-align: left;
+  }
+
+  .info.right {
+    text-align: right;
+  }
 }
